--- a/tests/tests.html
+++ b/tests/tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="tests.js" defer></script>
+    <script type="text/javascript" src="tableaux.js" defer></script>
     <link rel="stylesheet" type="text/css" href="tests.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
 
         <div class="draggable" draggable="true"><h5 class="main" draggable="true">JavaScript</h5>
             <div class="stockage">
-                <div class="card">
+                <div class="card cardOver">
                     <span></span>
                     J'aime les Brocolis !
                 </div>
