feat : essais en masse

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -12,51 +12,92 @@
 
     <div class="ul">
 
-        <div class="draggable" draggable="true"><h5 class="main" draggable="true">JavaScript</h5>
+        <div class="draggable" draggable="true"><div class="entete"><h5 class="main" draggable="true">JavaScript</h5><div class="bullets"><img src="bullets.png" alt=""></div></div>
             <div class="stockage">
-                <div class="card cardOver">
+                <div class="card">
                     <span></span>
                     J'aime les Brocolis !
+                    <div class="features">
+
+                    </div>
                 </div>
+                <div class="card">
+                    <span></span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et vestibulum odio
+                    <div class="features">
+
+                    </div>
+                </div>
+            </div>
+            <div class="add">
+                <img src="plus.png" alt="">
+                Ajouter une carte
             </div>
         </div>
 
-        <div class="draggable" draggable="true"><h5 class="main" draggable="true">HTML5</h5>
+        <div class="draggable" draggable="true"><div class="entete"><h5 class="main" draggable="true">HTML5</h5><div class="bullets"><img src="bullets.png" alt=""></div><div></div></div>
             <div class="stockage">
                 <div class="card">
                     <span></span>
                     Mangez des pommes !
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>Ce soir c'est pizzas
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Mangez des pommes !
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Ce soir c'est pizzas
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Mangez des pommes !
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Ce soir c'est pizzas
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Mangez des pommes !
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Ce soir c'est pizzas
+                    <div class="features">
+
+                    </div>
                 </div>
                 <div class="card">
                     <span></span>
                     Mangez des pommes !
+                    <div class="features">
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,7 +105,7 @@
         <!-- Pour ajouter des colonnes vides dans le tableau -->
         <div class="adder">
             <input type="text" class="input" placeholder="Ajoutez une autre liste"/>
-            <span class="add">OK</span>
+            <span class="addCard">OK</span>
         </div>
 
     </div>
