--- a/tests/tests.html
+++ b/tests/tests.html
@@ -12,8 +12,8 @@
 
     <div class="ul">
 
-        <div class="draggable" draggable="true"><div class="entete"><h5 class="main" draggable="true">JavaScript</h5><div class="bullets"><img src="bullets.png" alt=""></div></div>
-            <div class="stockage">
+        <div class="draggable" data-columns="0" draggable="true"><div class="entete"><h5 class="main" draggable="true">JavaScript</h5><div class="bullets"><img src="bullets.png" alt=""></div></div>
+            <div class="stockage" data-columns="0">
                 <div class="card">
                     <span></span>
                     J'aime les Brocolis !
@@ -29,14 +29,14 @@
                     </div>
                 </div>
             </div>
-            <div class="add">
+            <div class="add" data-columns="0">
                 <img src="plus.png" alt="">
                 Ajouter une carte
             </div>
         </div>
 
-        <div class="draggable" draggable="true"><div class="entete"><h5 class="main" draggable="true">HTML5</h5><div class="bullets"><img src="bullets.png" alt=""></div><div></div></div>
-            <div class="stockage">
+        <div class="draggable" data-columns="1" draggable="true"><div class="entete"><h5 class="main" draggable="true">HTML5</h5><div class="bullets"><img src="bullets.png" alt=""></div><div></div></div>
+            <div class="stockage" data-columns="1">
                 <div class="card">
                     <span></span>
                     Mangez des pommes !
@@ -99,6 +99,11 @@
 
                     </div>
                 </div>
+
+            </div>
+            <div class="add" data-columns="1">
+                <img src="plus.png" alt="">
+                Ajouter une carte
             </div>
         </div>
 
