--- a/tests/tests.html
+++ b/tests/tests.html
@@ -11,7 +11,7 @@
 <div class="all">
 
     <div class="ul">
-
+        <!--
         <div class="draggable" data-columns="0" draggable="true"><div class="entete"><h5 class="main" draggable="true">JavaScript</h5><div class="bullets"><img src="bullets.png" alt=""></div></div>
             <div class="stockage" data-columns="0">
                 <div class="card">
@@ -100,15 +100,18 @@
                     </div>
                 </div>
             </div>
+
             <div class="add" data-columns="1">
                 <img src="plus.png" alt="">
                 Ajouter une carte
             </div>
         </div>
-
+        -->
         <!-- Pour ajouter des colonnes vides dans le tableau -->
         <div class="adder">
-            <input type="text" class="input" placeholder="Ajoutez une autre liste"/>
+            <label>
+                <input type="text" class="input" placeholder="Ajouter une colonne"/>
+            </label>
             <span class="addCard">OK</span>
         </div>
 
