--- a/tests/tests.html
+++ b/tests/tests.html
@@ -117,6 +117,20 @@
 
     </div>
 
+
+    <div class="menuColonnes">
+        <img src="close.png" alt="" class="close">
+        <div>
+            <h5>Supprimer</h5>
+            <img src="bin.png" alt="">
+        </div>
+        <div>
+            <h5>Modifier</h5>
+            <img src="edition.png" alt="">
+        </div>
+    </div>
+
 </div>
+
 </body>
 </html>
