feat : suppression et modification colonnes OK

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -120,11 +120,11 @@
 
     <div class="menuColonnes">
         <img src="close.png" alt="" class="close">
-        <div>
+        <div class="deleteColumn">
             <h5>Supprimer</h5>
             <img src="bin.png" alt="">
         </div>
-        <div>
+        <div class="updateColumn">
             <h5>Modifier</h5>
             <img src="edition.png" alt="">
         </div>
